--- a/client/templates/welcome.html
+++ b/client/templates/welcome.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Intro">
+<ion-view view-title="Home">
   <div class="background-bg">
     <ion-slide-box on-slide-changed="home.slideChanged(index)">
       <ion-slide>
