--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -1,5 +1,8 @@
 <ion-view title="Profile">
   <ion-content>
     <!-- content display here -->
+    <a href="javascript:void()" ng-click="profile.captureVideo();">Record Video</a>
+    <br><br>
+    <a href="javascript:void()" ng-click="profile.clickPicture();">Click Picture</a>
   </ion-content>
 </ion-view>
