--- a/client/templates/suggestion.html
+++ b/client/templates/suggestion.html
@@ -1,5 +1,215 @@
-<ion-view title="Suggested for you">
-  <ion-content>
-    <!-- content display here -->
-  </ion-content>
+<ion-view view-title="Suggestions">
+	<ion-header-bar align-title="left" class="bar-positive">
+		<div class="bar bar-header bar-light head_bar">
+        	 <div class="back_arrrow">
+        		<span class="sp2"><a ui-sref="login"><i class="ion-chevron-left"></i></a></span>	
+               	<h2>Suggested for you</h2>
+        	 </div>
+		</div>
+	</ion-header-bar>
+	<ion-content>
+		<div class="full_back suggest">
+			<div class="row">
+          		<div class="col col-33">
+                    <div class="div1">
+                        <img src="/d1.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		4mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                    </div>
+          		</div>
+                <div class="col col-33">
+                    <div class="div1">
+                        <img src="/d3.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		2mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                    </div>
+                </div>
+                <div class="col col-33">
+                	<div class="div1">
+                        <img src="/d1.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		2mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Burger with cheddar...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                	</div>
+                </div>
+			</div>
+        	<div class="row">
+            	<div class="col col-33">
+                	<div class="div1">
+                        <img src="/d1.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		4mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Burger with cheddar...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                	</div>
+              	</div>
+                <div class="col col-33">
+                	<div class="div1">
+                        <img src="/d3.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		2mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Italian pizza salami</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                	</div>
+              	</div>
+                <div class="col col-33">
+                	<div class="div1">
+                        <img src="/d1.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		2mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                	</div>
+              	</div>
+         </div>
+        	<div class="row">
+          		<div class="col col-33">
+          			<div class="div1">
+                        <img src="/d1.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		4mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+            		</div>
+          		</div>
+                <div class="col col-33">
+                    <div class="div1">
+                        <img src="/d3.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		2mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Tasty chicken tacos...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                    </div>
+                </div>
+                <div class="col col-33">
+                    <div class="div1">
+                        <img src="/d1.png"/>
+                        <div class="rating-value">
+                        	<span>
+                            	<i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                                <i class="icon ion-ios-star-outline"></i>
+                           </span>
+                           <span class="pull-right">
+                           		2mi
+                           </span>
+                    	</div>
+                        <p class="dish-name">Burger with cheddar...</p>
+                        <p class="resturant-name">KFC Restaurant</p>
+                    </div>
+                </div>
+			</div>
+   		</div>
+	</ion-content>
+    <ion-footer-bar align-title="left" class="bar-assertive suggest_foot">
+      	<div class="tabs tabs-icon-top">
+          	<a class="tab-item">
+	            <img src="/tab1.png" alt="" class="inactive" style="display:none" />
+	            <img src="/tab1-hover.png" alt="" class="active" />
+          	</a>
+          	<a class="tab-item">
+	            <img src="/tab2.png" alt="" class="inactive"/>
+	            <img src="/tab2-hover.png" alt="" class="active" style="display:none" />
+          	</a>
+	        <a class="tab-item" ui-sref="review">
+	            <img src="/tab3.png" alt="" class="inactive"/>
+	            <img src="/tab3-hover.png" alt="" class="active" style="display:none" />
+	        </a>
+         	<a class="tab-item">
+            	<img src="/tab4.png" alt="" class="inactive" />
+            	<img src="/tab4-hover.png" alt="" class="active" style="display:none" />
+          	</a>
+          	<a class="tab-item">
+            	<img src="/tab5.png" alt="" class="inactive" />
+            	<img src="/tab5-hover.png" alt=""  class="active" style="display:none" />
+          	</a>
+        </div>
+    </ion-footer-bar>
 </ion-view>
