--- a/client/templates/tabs.html
+++ b/client/templates/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs class="tabs-stable tabs-icon-top tabs-color-positive" ng-cloak>
+<!-- <ion-tabs class="tabs-stable tabs-icon-top tabs-color-positive" ng-cloak>
   
   <ion-tab icon-on="ion-android-globe" icon-off="ion-android-globe" href="/tab/suggestion">
     <ion-nav-view name="tab-suggestions"></ion-nav-view>
@@ -20,4 +20,4 @@
     <ion-nav-view name="tab-profile"></ion-nav-view>
   </ion-tab>
 
-</ion-tabs>
+</ion-tabs> -->
