--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -150,7 +150,7 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.29);}
 .dish-name{color:#777170;font-size:14px;font-weight:500;width:100%;overflow:hidden; text-overflow: ellipsis;white-space: nowrap;margin-bottom:0}
 .resturant-name{color:#777170;font-size:13px;font-weight:300;margin-bottom:0}
 .dish-view a{opacity:1}
-.center-btn{  border: 11px solid #e23814;border-radius: 50%;height: 90px;margin: 8px auto;width: 90px;}
+.center-btn{  border: 11px solid #e23814;border-radius: 50%;height: 90px;margin: 3px auto 8px;width: 90px;}
 .btn-wrap {border-radius: 50%;box-shadow: 0 0 0 0 rgba(250, 80, 54, 0.4) inset, 0 0 0 16px rgba(255, 255, 255, 0.6) inset, 0 1px 2px rgba(0, 0, 0, 0.1);cursor: default;
     height: 100%;position: relative;transition: all 0.4s ease-in-out 0s;width: 100%;}
 .btn-wrap:hover{ box-shadow: 0 0 0 110px rgba(250, 80, 54, 0.4) inset, 0 0 0 16px rgba(255, 255, 255, 0.8) inset, 0 1px 2px rgba(0, 0, 0, 0.1);}
